# atom

./: .gitignore  CMakeLists.txt  Camera.h  INSTALACJA_WINDOWS.md  README.md  Shader.h  build_windows.bat  fragment_shader.fs  main.cpp  vertex_shader.vs
docs/: CHECKLIST.md
include/: Camera.h  Shader.h
shaders/: fragment_shader.fs
src/: main.cpp
